tests/paczka1/fuzzy1/34432115.err
Error in line 5: cx7Y A781 16,7
Error in line 15: lxT S799 63,75
Error in line 16: lxT S799 277,5
Error in line 17: 6iWtwksO S799 48,3
Error in line 28: cx7Y A598 89,0
